--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header>
         <p class="logo">INFOTECH COMPANY LTD</p>
-        <img src="IT groupimg.png">
+        <img src="image/IT groupimg.png">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
